[package]
name = "rust_project_euler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
round = "0.1.2"
primes = "0.3.0"
substring = "1.4.5"
num-bigint = "0.4.3"
num-traits = "0.2.15"

[dev-dependencies]
pretty_assertions = "1.3.0"
